--- a/dolgozok.html
+++ b/dolgozok.html
@@ -25,7 +25,7 @@
               </div>
             </div>
           </nav>
-          <h1>Humani</h1>
+          <h1>Dolgozók</h1>
     </div>
 </body>
 </html>
