--- a/dolgozok.html
+++ b/dolgozok.html
@@ -19,13 +19,22 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">Főoldal</a>
-                  <a class="nav-link" href="dolgozok.html">Dolgozók</a>
-                  <a class="nav-link" href="beosztasok.html">Beosztások</a>
+                  <a class="nav-link" href="dolgozok.html">Családtagok</a>
+                  <a class="nav-link" href="beosztasok.html">Rokoni kapcsolat</a>
                 </div>
               </div>
             </div>
           </nav>
-          <h1>Dolgozók</h1>
+          <h1>Családtagok</h1>
+          <div>
+            <ul class="list-group">
+                <li class="list-group-item">Halász András</li>
+                <li class="list-group-item">Halász Natália</li>
+                <li class="list-group-item">Halász Zoé</li>
+                <li class="list-group-item">Nagy Andrea</li>
+                <li class="list-group-item">Nagy Mihály</li>
+              </ul>
+          </div>
     </div>
 </body>
 </html>
