--- a/beosztasok.html
+++ b/beosztasok.html
@@ -19,13 +19,22 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">Főoldal</a>
-                  <a class="nav-link" href="dolgozok.html">Dolgozók</a>
-                  <a class="nav-link" href="beosztasok.html">Beosztások</a>
+                  <a class="nav-link" href="dolgozok.html">Családtagok</a>
+                  <a class="nav-link" href="beosztasok.html">Rokoni kapcsolat</a>
                 </div>
               </div>
             </div>
           </nav>
-          <h1>Beosztások</h1>
+          <h1>Rokoni kapcsolat</h1>
+          <div>
+            <ul class="list-group">
+                <li class="list-group-item">Apa</li>
+                <li class="list-group-item">Anya</li>
+                <li class="list-group-item">Gyermek</li>
+                <li class="list-group-item">Lány testvér</li>
+                <li class="list-group-item">Fiú testvér</li>
+              </ul>
+          </div>
     </div>
 </body>
 </html>
