--- a/dolgozok.html
+++ b/dolgozok.html
@@ -19,14 +19,14 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">Főoldal</a>
-                  <a class="nav-link" href="dolgozok.html">Családtagok</a>
-                  <a class="nav-link" href="beosztasok.html">Rokoni kapcsolat</a>
+                  <a class="nav-link" href="dolgozok.html">Dolgozók</a>
+                  <a class="nav-link" href="beosztasok.html">Beosztások</a>
                 </div>
               </div>
             </div>
           </nav>
-          <h1>Családtagok</h1>
-          <div>
+          <h1>Dolgozók</h1>
+          <!-- <div>
             <ul class="list-group">
                 <li class="list-group-item">Halász András</li>
                 <li class="list-group-item">Halász Natália</li>
@@ -34,6 +34,51 @@
                 <li class="list-group-item">Nagy Andrea</li>
                 <li class="list-group-item">Nagy Mihály</li>
               </ul>
+          </div> -->
+
+          <div>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Név</th>
+                    <th scope="col">Település</th>
+                    <th scope="col">Fizetés</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Halász András</td>
+                    <td>Budapest</td>
+                    <td>1 000 000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Halász Natália</td>
+                    <td>Budapest</td>
+                    <td>800 000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Nagy Andrea</td>
+                    <td>Sydney</td>
+                    <td>900 000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>Nagy Mihály</td>
+                    <td>Budapest</td>
+                    <td>700 000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>Halász Zoé</td>
+                    <td>Budapest</td>
+                    <td>200 000</td>
+                  </tr>
+                </tbody>
+              </table>
           </div>
     </div>
 </body>
