--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginmodal">
   Belépés
 </button>
+<button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#aboutmodal">
+  Névjegy
+</button>
           </nav>
           <h1>Humani</h1>
     </div>
@@ -56,8 +59,38 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Bezár</button>
             <button type="button" class="btn btn-primary">Belépés</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal" id="aboutmodal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Névjegy</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+
+
+            <div class="card" style="width: 18rem;">
+              <img src="images\humani_ikon.png" class="card-img-top w-25" alt="Humani logó">
+              <div class="card-body">
+                <h5 class="card-title">Humani</h5>
+                <p class="card-text">Dolgozó nyilvántartó</p>
+                <p class="card-text">Verzió: 0.1</p>
+                <a href="https://github.com/halasznandras/humani" 
+                target="_blank"
+                class="btn btn-primary">GitHub</a>
+              </div>
+            </div>
+
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Bezár</button>
           </div>
         </div>
       </div>
